--- a/style.css
+++ b/style.css
@@ -438,3 +438,126 @@ section .title::after{
     }
 }
 
+
+/* == animate == */
+@import url("plugins/animate.css");
+
+
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+}
+
+.preloader .preloader-before,
+.preloader .preloader-after {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: #090808;
+}
+
+.preloader .preloader-before {
+  top: 0;
+}
+
+.preloader .preloader-after {
+  bottom: 0;
+}
+
+.preloader .preloader-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: auto;
+  bottom: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.preloader .preloader-block .title {
+  position: absolute;
+  left: 0;
+  bottom: calc(50% + 16px);
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+  font-size: 25px;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  color: #fff;
+}
+
+.preloader .preloader-block .percent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+  font-weight: 700;
+  letter-spacing: 8px;
+  font-size: 24vw;
+  color: rgba(54, 54, 53, 0.1);
+  z-index: 1;
+}
+
+.preloader .preloader-block .loading {
+  position: absolute;
+  top: calc(50% + 16px);
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  color: #fff;
+  -webkit-animation: blink-animation 2.2s linear infinite;
+}
+
+.preloader .preloader-bar {
+  position: absolute;
+  z-index: 2;
+  top: calc(50% - 1px);
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: #1d1d1d;
+}
+
+.preloader .preloader-bar .preloader-progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: auto;
+  bottom: auto;
+  height: 100%;
+  width: 0;
+  background: #fff;
+}
+
+
+@-webkit-keyframes blink-animation {
+  0% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes blink-animation {
+  0% {
+    opacity: 0;
+  }
+}
+
+@keyframes blink-animation {
+  0% {
+    opacity: 0;
+  }
+}
