add new 'project'  section, update working experience

--- a/style.css
+++ b/style.css
@@ -177,8 +177,6 @@ section .title::after{
     z-index:1;
 }
 
-
-
 .home .max-width{
   width: 100%;
   display: flex;
@@ -276,7 +274,7 @@ section .title::after{
 .education .title::after,
 .teams .title::after{
     background: #111;
-    content: "-Where I have been-";
+    content: "Where I have been";
 }
 .education .serv-content .card{
     width: calc(50% - 20px);
@@ -286,6 +284,7 @@ section .title::after{
     padding: 20px 25px;
     cursor: pointer;
     transition: all 0.3s ease;
+    margin-bottom: 10px;
 }
 .education .serv-content .card:hover{
     background: #739900;
@@ -308,6 +307,11 @@ section .title::after{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
+}
+
+/* project start */
+.Project .title::after{
+    content: "something interesting about my work";
 }
 
 
