--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ section .title::after{
 }
 
 /* services section styling */
-.education, .teams{
+.education{
     color:#fff;
     background: #111;
 }
@@ -274,7 +274,6 @@ section .title::after{
 .education .title::after,
 .teams .title::after{
     background: #111;
-    content: "Where I have been";
 }
 .education .serv-content .card{
     width: calc(50% - 20px);
@@ -568,3 +567,4 @@ section .title::after{
 .hidden {
   display: none !important;
 }
+
